--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-interactive-highlighter": "^0.3.1",
     "react-onesignal": "^2.0.2",
     "react-redux": "^7.2.4",
